Refactor journey info to show equipment info more comprehensibly.

--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -73,6 +73,8 @@
   "journey.terminal_time": "Terminal time",
   "journey.recovery_time": "Recovery time",
   "journey.requested_equipment": "Equipment",
+  "journey.emission_class": "Emission class",
+  "journey.exterior_color": "Exterior color",
   "journey.departure_minus_terminal": "departure time - terminal time",
   "journey.stops_hidden": "stops hidden",
   "journey.arrival": "Arrival",
@@ -90,6 +92,7 @@
   "journey.type.deadrun": "Deadrun",
   "journey.type.signoff": "Signed out",
   "journey.type.journey": "Journey",
+  "journey.emission_class_unknown": "Emission class unknown",
 
   "journey.event.DEP": "Departure from stop area",
   "journey.event.ARR": "Arrival",
@@ -207,6 +210,7 @@
   "general.live": "Live update",
   "general.auto_update": "Simulate time",
   "general.no_type": "No type",
+  "general.no_requirement": "No requirement",
   "general.no_data": "No data",
   "general.apply": "Apply",
   "general.clear": "Clear",
