--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -73,6 +73,8 @@
   "journey.terminal_time": "Terminaaliaika",
   "journey.recovery_time": "Elpymisaika",
   "journey.requested_equipment": "Kalustovaatimus",
+  "journey.emission_class": "Päästöluokka",
+  "journey.exterior_color": "Ulkoväri",
   "journey.departure_minus_terminal": "Lähtöaika - terminaaliaika",
   "journey.stops_hidden": "pysäkkiä piilossa",
   "journey.arrival": "Saapuminen",
@@ -90,6 +92,7 @@
   "journey.type.deadrun": "Kirjautumaton",
   "journey.type.signoff": "Kirjautumaton",
   "journey.type.journey": "Lähtö",
+  "journey.emission_class_unknown": "Tuntematon päästöluokka",
 
   "journey.event.ALL": "Kaikki tapahtumat",
   "journey.event.DEP": "Lähtö pysäkkialueelta",
@@ -208,6 +211,7 @@
   "general.live": "Live-päivitys",
   "general.auto_update": "Aikasimulointi",
   "general.no_type": "Ei tyyppiä",
+  "general.no_requirement": "Ei vaatimusta",
   "general.no_data": "Ei tietoja",
   "general.share": "Jaa näkymä",
   "general.apply": "Käytä",
