--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -73,6 +73,8 @@
   "journey.terminal_time": "Terminaltid",
   "journey.recovery_time": "Återhämtningstid",
   "journey.requested_equipment": "Utrustning",
+  "journey.emission_class": "Utsläppsklass",
+  "journey.exterior_color": "Yttre färg",
   "journey.departure_minus_terminal": "avgångstid - terminaltid",
   "journey.stops_hidden": "hållplatser gömda",
   "journey.arrival": "Ankomst",
@@ -90,6 +92,7 @@
   "journey.type.deadrun": "Inte inloggad",
   "journey.type.signoff": "Inte inloggad",
   "journey.type.journey": "Resa",
+  "journey.emission_class_unknown": "Okänd utsläppsklass",
 
   "journey.event.ALL": "Alla händelser",
   "journey.event.DEP": "Lämnade hållplatsområdet",
@@ -174,14 +177,14 @@
   "roadcondition.damp-salted": "Förmodligen fuktigt och saltat",
   "roadcondition.ice-slush": "Slaskigt",
 
-  "tlp.requestid":"Begärans id",
-  "tlp.junctionid":"Sid",
-  "tlp.decision":"Beslut",
-  "tlp.attempt":"Försök",
-  "tlp.type":"Typ",
-  "tlp.priority":"Prioritet",
-  "tlp.reason":"Orsak",
-  "tlp.signalgroupnbr":"Signalgruppens nummer",
+  "tlp.requestid": "Begärans id",
+  "tlp.junctionid": "Sid",
+  "tlp.decision": "Beslut",
+  "tlp.attempt": "Försök",
+  "tlp.type": "Typ",
+  "tlp.priority": "Prioritet",
+  "tlp.reason": "Orsak",
+  "tlp.signalgroupnbr": "Signalgruppens nummer",
 
   "auth.login": "Logga in (HSL ID)",
   "auth.logout": "Logga ut",
@@ -208,6 +211,7 @@
   "general.live": "Uppdatera live",
   "general.auto_update": "Simulera tid",
   "general.no_type": "Ingen typ",
+  "general.no_requirement": "Inga krav",
   "general.no_data": "Ingen data",
   "general.apply": "Använd",
   "general.clear": "Töm",
