--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -11,6 +11,7 @@
   "filterpanel.filter_by_vehicle": "Hae ajoneuvoa",
   "filterpanel.remove_vehicle": "Poista ajoneuvo",
   "filterpanel.filter_by_stop": "Hae pysäkkiä",
+  "filterpanel.filter_by_location": "Hae sijaintia",
   "filterpanel.remove_stop": "Poista pysäkki",
   "filterpanel.filter_by_line": "Hae linjaa",
   "filterpanel.find_line_route": "Hae reitti",
@@ -174,14 +175,14 @@
   "roadcondition.damp-salted": "Tod.näk. kostea ja suolainen",
   "roadcondition.ice-slush": "Sohjo",
 
-  "tlp.requestid":"Pyynnön ID",
-  "tlp.junctionid":"Risteystunnus",
-  "tlp.decision":"Päätös",
-  "tlp.attempt":"Yritys",
-  "tlp.type":"Tyyppi",
-  "tlp.priority":"Prioriteetti",
-  "tlp.reason":"Syy",
-  "tlp.signalgroupnbr":"Ilmaisun ID (output)",
+  "tlp.requestid": "Pyynnön ID",
+  "tlp.junctionid": "Risteystunnus",
+  "tlp.decision": "Päätös",
+  "tlp.attempt": "Yritys",
+  "tlp.type": "Tyyppi",
+  "tlp.priority": "Prioriteetti",
+  "tlp.reason": "Syy",
+  "tlp.signalgroupnbr": "Ilmaisun ID (output)",
 
   "auth.login": "Kirjaudu (HSL ID)",
   "auth.logout": "Kirjaudu ulos",
