--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -174,14 +174,19 @@
   "roadcondition.damp-salted": "Förmodligen fuktigt och saltat",
   "roadcondition.ice-slush": "Slaskigt",
 
-  "tlp.requestid":"Begärans id",
-  "tlp.junctionid":"Sid",
-  "tlp.decision":"Beslut",
-  "tlp.attempt":"Försök",
-  "tlp.type":"Typ",
-  "tlp.priority":"Prioritet",
-  "tlp.reason":"Orsak",
-  "tlp.signalgroupnbr":"Signalgruppens nummer",
+  "tlp.requestid": "Begärans id",
+  "tlp.junctionid": "Sid",
+  "tlp.decision": "Beslut",
+  "tlp.attempt": "Försök",
+  "tlp.type": "Typ",
+  "tlp.priority": "Prioritet",
+  "tlp.reason": "Orsak",
+  "tlp.signalgroupnbr": "Signalgruppens nummer",
+
+  "apc.totalPassengersIn": "Påstigande resenärer",
+  "apc.totalPassengersOut": "Avstigande resenär",
+  "apc.vehicleLoad": "Last",
+  "apc.vehicleLoadRatio": "Fyllnadsgrad",
 
   "auth.login": "Logga in (HSL ID)",
   "auth.logout": "Logga ut",
