--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -11,6 +11,7 @@
   "filterpanel.filter_by_vehicle": "Sök fordon",
   "filterpanel.remove_vehicle": "Återställ fordon",
   "filterpanel.filter_by_stop": "Sök hållplatser",
+  "filterpanel.filter_by_location": "Söka med plats",
   "filterpanel.remove_stop": "Återställ hållplats",
   "filterpanel.filter_by_line": "Sök linjer",
   "filterpanel.find_line_route": "Sök rutt",
