--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -92,6 +92,7 @@
   "journey.type.signoff": "Signed out",
   "journey.type.journey": "Journey",
 
+  "journey.event.APC": "Passengercount",
   "journey.event.DEP": "Departure from stop area",
   "journey.event.ARR": "Arrival",
   "journey.event.DEPARTURE": "Departure",
