--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -11,6 +11,7 @@
   "filterpanel.filter_by_vehicle": "Sök fordon",
   "filterpanel.remove_vehicle": "Återställ fordon",
   "filterpanel.filter_by_stop": "Sök hållplatser",
+  "filterpanel.filter_by_location": "Söka med plats",
   "filterpanel.remove_stop": "Återställ hållplats",
   "filterpanel.filter_by_line": "Sök linjer",
   "filterpanel.find_line_route": "Sök rutt",
@@ -174,14 +175,25 @@
   "roadcondition.damp-salted": "Förmodligen fuktigt och saltat",
   "roadcondition.ice-slush": "Slaskigt",
 
-  "tlp.requestid":"Begärans id",
-  "tlp.junctionid":"Sid",
-  "tlp.decision":"Beslut",
-  "tlp.attempt":"Försök",
-  "tlp.type":"Typ",
-  "tlp.priority":"Prioritet",
-  "tlp.reason":"Orsak",
-  "tlp.signalgroupnbr":"Signalgruppens nummer",
+  "tlp.requestid": "Begärans id",
+  "tlp.junctionid": "Sid",
+  "tlp.decision": "Beslut",
+  "tlp.attempt": "Försök",
+  "tlp.type": "Typ",
+  "tlp.priority": "Prioritet",
+  "tlp.reason": "Orsak",
+  "tlp.signalgroupnbr": "Signalgruppens nummer",
+
+  "apc.totalPassengersIn": "Påstigande resenärer",
+  "apc.totalPassengersOut": "Avstigande resenär",
+  "apc.vehicleLoad": "Last",
+  "apc.vehicleLoadRatio": "Fyllnadsgrad",
+  "apc.empty": "Empty",
+  "apc.mostlyAvailableSeats": "Mostly available seats",
+  "apc.fewAvailableSeats": "Few available seats",
+  "apc.onlyStandingSeats": "Only standing seats",
+  "apc.fewStandingSeats": "Few standing seats",
+  "apc.full": "Full",
 
   "auth.login": "Logga in (HSL ID)",
   "auth.logout": "Logga ut",
