--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -11,6 +11,7 @@
   "filterpanel.filter_by_vehicle": "Filter by vehicle",
   "filterpanel.remove_vehicle": "Remove vehicle",
   "filterpanel.filter_by_stop": "Search stops",
+  "filterpanel.filter_by_location": "Search location",
   "filterpanel.remove_stop": "Remove stop",
   "filterpanel.filter_by_line": "Search line",
   "filterpanel.find_line_route": "Search route",
@@ -91,6 +92,7 @@
   "journey.type.signoff": "Signed out",
   "journey.type.journey": "Journey",
 
+  "journey.event.APC": "Passengercount",
   "journey.event.DEP": "Departure from stop area",
   "journey.event.ARR": "Arrival",
   "journey.event.DEPARTURE": "Departure",
@@ -181,6 +183,22 @@
   "tlp.priority": "Priority",
   "tlp.reason": "Reason",
   "tlp.signalgroupnbr": "Signal group number",
+
+  "apc.totalPassengersIn": "Total passengers in",
+  "apc.totalPassengersOut": "Total passengers out",
+  "apc.vehicleLoad": "Vehicle load",
+  "apc.vehicleLoadRatio": "Vehicle load ratio",
+  "apc.empty": "Empty",
+  "apc.mostlyAvailableSeats": "Mostly available seats",
+  "apc.fewAvailableSeats": "Few available seats",
+  "apc.onlyStandingSeats": "Only standing seats",
+  "apc.fewStandingSeats": "Few standing seats",
+  "apc.full": "Full",
+
+  "apc.totalPassengersIn": "Passengers in",
+  "apc.totalPassengersOut": "Passengers out",
+  "apc.vehicleLoad": "Vehicle load",
+  "apc.vehicleLoadRatio": "Vehicle load ratio",
 
   "auth.login": "Log in (HSL ID)",
   "auth.logout": "Log out",
