--- a/src/languages/help/se.json
+++ b/src/languages/help/se.json
@@ -1,66 +1,66 @@
 {
-  "One week backward": "Valitse päivämäärä yhden viikon takaa.",
-  "One week forward": "Valitse päivämäärä yhden viikon päästä.",
-  "One day backward": "Valitse eilinen päivämääräksi.",
-  "One day forward": "Valitse huominen päivämääräksi.",
-  "Select date field": "Valitse päivämäärä. Kaikki Transitlogin näyttämät tiedot ovat tämän päivämäärän mukaisia.",
-  "One time step backward": "Yksi aika-askel taaksepäin",
-  "One time step forward": "Yksi aika-askel eteenpäin",
-  "Select time": "Valitse aika josta haluat tutkia tietoja. Voit myös asettaa aikaa liukusäätimellä.",
-  "Time increment field": "Aseta kuinka paljon aika muuttuu kun simulointi on käynnissä tai kun käytät aikakentän eteenpäin/taaksepäin nappeja",
-  "Search range minutes field": "Aseta aluehaun aikaväli, eli kuinka pitkältä aikaväliltä aluehaku hakee tapahtumia. Aikavälin keskipiste on valittu aika hakuhetkellä.",
-  "Select route": "Valitse reitin minkä haluat tutkia.",
-  "Select vehicle": "Etsi HSL-alueen ajoneuvoa rekisterinumerolla, kylkinumerolla tai liikennöitsijän nimellä. Korostettuina ajoneuvot jotka ovat olleet linja-ajossa kyseisenä päivänä",
-  "Select vehicle disabled": "Ajoneuvohaku on suljettu kun sinulla on valittu lähtö. Poista lähtö-valinta niin voit hakea ajoneuvoa.",
-  "Select stop": "Etsi pysäkki pysäkkinumerolla, tunnisteella tai nimellä.",
-  "Clear vehicle": "Tyhjentää ajoneuvohaku-kenttää. Tiedot mitkä haettiin ajoneuvotiedon pohjalta tyhjentyy myös.",
-  "Clear stop": "Tyhjentää pysäkkihaku-kenttää. Tiedot jotka haettiin pysäkkitiedon pohjalta tyhjentyy myös.",
-  "Time slider": "Säädä aika-asetus vierittämällä liukusäädintä. Säädin on rajoitettu yhteen päivään kun matkaa ei ole valittuna, ja rajoitettu valitun matkan alku- ja loppuaikaan kun on valittu. Aika päivittyy heti ja liukusäädin on kätevä tapa tutkia matkojen etenemisiä.",
-  "Share button": "Avaa ikkuna mistä voit kopioida linkin jaettavaksi. Linkin avaaja näkee juuri saman näkymän kun mitä sinä näet nyt.",
-  "Language select finnish": "Valitse käyttöliittymän kieleksi suomi.",
-  "Language select swedish": "Valitse käyttöliittymän kieleksi ruotsi.",
-  "Language select english": "Valitse käyttöliittymän kieleksi englanti.",
-  "Reset button": "Nollaa ja tyhjentää kaikki kentät ja asetukset. Jättää aika-asetukset (päivämäärä ja aika) ennalleen.",
-  "Update button": "Päivittää aika-asetukset (päivämäärä ja aika) nykyhetkeen ja virkistää kaikkia haettuja HFP-tietoja.",
-  "Live toggle": "Jos aika-asetukset ovat asetettu nykyhetkeen, päivittää haettuja HFP-tietoja noin kerran sekunnissa. Jos aika-asetukset ovat asetettu menneisyyteen, lisää 5 sekuntia (tai \"aikamuutos\" asetuksen mukainen arvo) kelloon per sekunti jolloin aika-herkät tiedot päivittyy.",
-  "Area search tab": "Aluehaun tulokset ryhmitetty matkoittain.",
-  "Journeys tab": "Valitun reitin kaikki matkat valitun päivän aikana.",
-  "Weekly journeys tab": "Valitun reitin kaikki matkat viikon ajan.",
-  "Vehicle journeys tab": "Valitun ajoneuvon koko lähtöketju valitun päivän aikana.",
-  "Timetable tab": "Valitun pysäkin kaikki lähdöt valitun päivän aikana.",
-  "Help tab": "Ohjeet alkuun pääsemiseksi.",
-  "Toggle sidebar button": "Piilota tai näytä sivupalkki.",
-  "Toggle journey details button": "Piilota tai näytä valitun matkan tiedot.",
-  "Toggle journey graph button": "Piilota tai näytä valitun matkan viiveet ja nopeudet kaaviona.",
-  "Planned journey time": "Matkan suunniteltu alkuaika.",
-  "Planned journey time with data": "Matkan suunniteltu alkuaika. Valitse tämä lähtö klikkaamalla.",
-  "Journey no data": "Tämän matkan toteumasta ei ole tietoja. Se on vielä tulevaisuudessa, auton GPS ei toiminut oikein tai sitä jätettiin ajaamatta.",
-  "Journey list diff": "Aikaero suunnittelun ja toteutuneen lähdön välillä. Punainen = lähtö ennen suunniteltua lähtöä, keltainen = lähtö yli 3min suunnitellun lähdön jälkeen, vihreä = lähtö alle 3min suunnitellun lähdön jälkeen. Jos toteutunut lähtö tapahtui ennen suunniteltua lähtöaikaa (punainen), numero on negatiivinen.",
-  "Journey list observed": "Toteutunut lähtöaika.",
-  "Journey list row": "Valitse tämä lähtö klikkaamalla.",
-  "Journey instance": "Jos vuoro ajetaan monella kulkuneuvolla, tämä on kulkuneuvon järjestysnumero.",
-  "Journey day type": "Lähdön päivätyyppi. Jos näet tämän, kyseessä on erikoislähtö tai lähdön päivätyyppi on eri kuin valittu päivämäärän päivätyyppi.",
-  "All alerts": "Listaus kaikista poikkeuksista ja peruutuksista tältä päivältä.",
-  "All cancellations heading": "Tämä on lista kaikista tämän päivän peruutuksista. Reitit ja lähdöt näyttävät vain niihin kohdistuvia peruutuksia.",
-  "All alerts heading": "Tämä on lista kaikista poikkeuksista mitkä olivat voimassa valittuna aikana. Säädä aikaa nähdäksesi muita poikkeuksia jotka olivat voimassa muina aikoina.",
-  "Alerts heading": "Kaikki valitun kohteen poikkeukset mitkä olivat voimassa tähän aikaan.",
-  "Cancellations heading": "Kaikki tämän reitin tai lähdön peruutukset.",
-  "Sign in": "Kirjaudu sisään.",
-  "Sign in with HSL-ID": "Kirjaudu sisään käyttäen HSL-ID:tä.",
-  "Developer sign in": "Kirjaudu sisään käyttäen kehittäjätunnuksia.",
-  "Create user": "Luo HSL ID-tunnus kirjautuaksesi palveluun.",
-  "Focus on stop": "Kohdista pysäkkiin klikkaamalla.",
-  "Show info": "Näytä tai piilota käyttöohjeet.",
-  "Data delay": "Tietojen viive tarkoittaa ero tapahtuman tallennushetkeltä tapahtuman vastaanottohetkeen. Suuri viive ei tarkoita että tiedot olisi virheellisiä.",
+  "One week backward": "Go one week back",
+  "One week forward": "Go one week forward",
+  "One day backward": "Select yesterday",
+  "One day forward": "Select tomorrow",
+  "Select date field": "Select a date. All data that Transitlog shows is based on this date.",
+  "One time step backward": "Go back one time-step. Set the time-step in the time settings.",
+  "One time step forward": "Go forward one time-step. Set the time-step in the time settings.",
+  "Select time": "Select the time at which you want to analyze events. You can also select a time with the time slider.",
+  "Time increment field": "Set the time-step that is used in simulation mode or when using the backward/forward buttons in the time field.",
+  "Search range minutes field": "Set the range of minutes that is used in the area search. Events in the selected areas will be fetched from within this timerange with the current time at the center.",
+  "Select route": "Select the route that you want to observe. Filter the suggestions by writing in this field and make your selection. Use a forward slash (/) and the numbers 1 or 2 to filter route directions.",
+  "Select vehicle": "Find vehicles that are active within the HSL area. Search using the vehicle number, operator name or registry number. Vehicles that have been in signed-in journeys on the current day are highlighted.",
+  "Select vehicle disabled": "The vehicle search is disabled while you have a journey selected. Deselect the journey to enable the vehicle search again.",
+  "Select stop": "Find a stop by the stop id, the short id or the name of the stop.",
+  "Clear vehicle": "Clear the vehicle search field and the selected vehicle.",
+  "Clear stop": "Clear the stop search field and the selected stop.",
+  "Time slider": "Adjust the time setting by scrolling the slider. If you have a journey or an area selected, the range of the slider will be limited to the time of the first and last event that is available for the selection. The slider is a convenient way to examine events over time.",
+  "Share button": "Open a small window from where you can conveniently copy the URL of this view that contains all the current selections you have made. Share the URL with someone and they will see what you see.",
+  "Language select finnish": "Set Finnish as the language of the interface.",
+  "Language select swedish": "Set Swedish as the language of the interface.",
+  "Language select english": "Set English as the language of the interface.",
+  "Reset button": "Reset and clear all settings except the time and date.",
+  "Update button": "Set the time and date to current time and refresh all fetched data.",
+  "Live toggle": "This setting will continuously update the vehicle position and stop times data if the time setting is the current time. If the time you have selected is in the past, this setting will continuously add the time-step value to the clock, resulting in a simulation of past events.",
+  "Area search tab": "All journeys that have events in the currently selected area.",
+  "Journeys tab": "All journeys of the currently selected route for this day.",
+  "Weekly journeys tab": "All journeys for the whole week of the currently selected route.",
+  "Vehicle journeys tab": "All journeys that the currently selected vehicle has made today.",
+  "Timetable tab": "Timetables and journeys for the currently selected stop.",
+  "Help tab": "Instrutions for getting started.",
+  "Toggle sidebar button": "Show or hide the sidebar.",
+  "Toggle journey details button": "Show or hide information about the currently selected journey or departure.",
+  "Toggle journey graph button": "Show or hide the graph of delays and average speed.",
+  "Planned journey time": "The planned departure time. Click to see more information about this departure.",
+  "Planned journey time with data": "The planned departure time of the journey. Click to select the journey and see more information.",
+  "Journey no data": "No observed events were found for this journey. If it is not in the future it may have been cancelled or the victim of a technical error.",
+  "Journey list diff": "The time difference between the planned and the observed departure time. Red = early departure, yellow = late departure and green = departure on time. If the departure happened before the planned time, the number is negative.",
+  "Journey list observed": "The observed time of the departure.",
+  "Journey list row": "Click to select this departure.",
+  "Journey instance": "You are seeing this number because multiple vehicles were signed in to drive this departure. This is mostly planned but can also be a sign of driver error.",
+  "Journey day type": "The day type of the departure. If you're seeing this, it is an exception departure or the day type of the departure is different than the day type of the currently selected day.",
+  "All alerts": "A listing of all alerts and cancellations for the currently selected day.",
+  "All cancellations heading": "This is a list of all cancellations from today. Routes and departures will show only cancellations that apply to them.",
+  "All alerts heading": "This is a list of all alerts that were active during the selected time. Adjust the time to show other alerts that were active during other times.",
+  "Alerts heading": "All alerts that apply to this item that were in effect at this time.",
+  "Cancellations heading": "All cancellations for this route or departure.",
+  "Sign in": "Sign in",
+  "Sign in with HSL-ID": "Sign in using HSL-ID.",
+  "Developer sign in": "Sign in as developer.",
+  "Create user": "Create HSL-ID user to sign in.",
+  "Focus on stop": "Click to focus on stop.",
+  "Show info": "Show or hide instructions.",
+  "Data delay": "The data delay describes the difference between the time when an event was recorded to the time it was received. A large delay does not mean that there's anything wrong with the data, only that it arrived at the broker later than it was recorded.",
 
-  "PDE": "Lähtö, ovet laitettu kiinni.",
-  "DEP": "Lähtö, ajoneuvo poistunut pysäkkialueelta.",
-  "ARS": "Saapuminen, ajoneuvo pysähtynyt pysäkillä.",
-  "ARR": "Saapuminen, ajoneuvo pysäkkialueen sisällä.",
-  "ALL": "Näytä tai piilota kaikki tapahtumat. Piilotus palauttaa filtterit alkuasentoon jolloin näkyy tärkeimmät lähdöt ja saapumiset.",
-  "DEPARTURE": "Lähtö pysäkiltä. Tällä filtterillä näkyy pysäkkien PDE-tapahtumat. Joissakin tapauksissa tapahtumatyyppi on DEP.",
-  "TIMING_STOP_ARS": "Ajantasauspysäkille saapuminen. Näyttää vain ajantasauspysäkkien ARS-tapahtumat.",
-  "TERMINAL_ARS": "Alku- tai päätypysäkille saapuminen. Näyttää vain näiden pysäkkien ARS-tapahtumat.",
-  "PLANNED": "Suunniteltu lähtö JOREn mukaan.",
-  "CANCELLATION": "Peruutustapahtumat."
+  "PDE": "Departure when the doors closed",
+  "DEP": "Departure when the vehicle exited the stop radius.",
+  "ARS": "Arrival when the vehicle arrived to a stop.",
+  "ARR": "Arrival when the vehicle arrived inside the stop radius.",
+  "ALL": "Show or hide all events. Deselecting this will reset the filters to the original state that shows the most important departure and arrival events.",
+  "DEPARTURE": "PDE departure events from a stop. In some cases the event type is DEP.",
+  "TIMING_STOP_ARS": "Arrival at a timing stop.",
+  "TERMINAL_ARS": "Arrival at a terminus stop.",
+  "PLANNED": "Planned stops according to JORE.",
+  "CANCELLATION": "Cancellation events."
 }
