--- a/src/languages/help/fi.json
+++ b/src/languages/help/fi.json
@@ -6,7 +6,7 @@
   "Select date field": "Valitse päivämäärä. Kaikki Transitlogin näyttämät tiedot ovat tämän päivämäärän mukaisia.",
   "One time step backward": "Yksi aika-askel taaksepäin",
   "One time step forward": "Yksi aika-askel eteenpäin",
-  "Select time": "Valitse aika josta haluat tutkia tietoja. Voit myös asettaa aikaa liukusäätimellä.",
+  "Select time": "Valitse aika josta haluat tutkia tietoja. Voit myös asettaa ajan liukusäätimellä.",
   "Time increment field": "Aseta kuinka paljon aika muuttuu kun simulointi on käynnissä tai kun käytät aikakentän eteenpäin/taaksepäin nappeja",
   "Search range minutes field": "Aseta aluehaun aikaväli, eli kuinka pitkältä aikaväliltä aluehaku hakee tapahtumia. Aikavälin keskipiste on valittu aika hakuhetkellä.",
   "Select location": "Etsi sijaintia.",
@@ -36,7 +36,7 @@
   "Planned journey time": "Matkan suunniteltu alkuaika.",
   "Planned journey time with data": "Matkan suunniteltu alkuaika. Valitse tämä lähtö klikkaamalla.",
   "Journey no data": "Tämän matkan toteumasta ei ole tietoja. Se on vielä tulevaisuudessa, auton GPS ei toiminut oikein tai sitä jätettiin ajaamatta.",
-  "Journey list diff": "Aikaero suunnittelun ja toteutuneen lähdön välillä. Punainen = lähtö ennen suunniteltua lähtöä, keltainen = lähtö yli 3min suunnitellun lähdön jälkeen, vihreä = lähtö alle 3min suunnitellun lähdön jälkeen. Jos toteutunut lähtö tapahtui ennen suunniteltua lähtöaikaa (punainen), numero on negatiivinen.",
+  "Journey list diff": "Aikaero suunnitellun ja toteutuneen lähdön välillä. Punainen = lähtö ennen suunniteltua lähtöä, keltainen = lähtö yli 3min suunnitellun lähdön jälkeen, vihreä = lähtö alle 3min suunnitellun lähdön jälkeen. Jos toteutunut lähtö tapahtui ennen suunniteltua lähtöaikaa (punainen), numero on negatiivinen.",
   "Journey list observed": "Toteutunut lähtöaika.",
   "Journey list row": "Valitse tämä lähtö klikkaamalla.",
   "Journey instance": "Jos vuoro ajetaan monella kulkuneuvolla, tämä on kulkuneuvon järjestysnumero.",
