--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -11,6 +11,7 @@
   "filterpanel.filter_by_vehicle": "Filter by vehicle",
   "filterpanel.remove_vehicle": "Remove vehicle",
   "filterpanel.filter_by_stop": "Search stops",
+  "filterpanel.filter_by_location": "Search location",
   "filterpanel.remove_stop": "Remove stop",
   "filterpanel.filter_by_line": "Search line",
   "filterpanel.find_line_route": "Search route",
@@ -91,6 +92,7 @@
   "journey.type.signoff": "Signed out",
   "journey.type.journey": "Journey",
 
+  "journey.event.APC": "Passengercount",
   "journey.event.DEP": "Departure from stop area",
   "journey.event.ARR": "Arrival",
   "journey.event.DEPARTURE": "Departure",
@@ -173,14 +175,36 @@
   "roadcondition.damp-salted": "Probably damp and salted",
   "roadcondition.ice-slush": "Ice slush",
 
-  "tlp.requestid":"Request id",
-  "tlp.junctionid":"Sid",
-  "tlp.decision":"Decision",
-  "tlp.attempt":"Attempt",
-  "tlp.type":"Type",
-  "tlp.priority":"Priority",
-  "tlp.reason":"Reason",
-  "tlp.signalgroupnbr":"Signal group number",
+  "tlp.requestid": "Request id",
+  "tlp.junctionid": "Sid",
+  "tlp.decision": "Decision",
+  "tlp.attempt": "Attempt",
+  "tlp.type": "Type",
+  "tlp.priority": "Priority",
+  "tlp.reason": "Reason",
+  "tlp.signalgroupnbr": "Signal group number",
+
+  "loc.GPS": "Location is received from GPS.",
+  "loc.ODO": "Location is calculated based on odometer value.",
+  "loc.MAN": "Location is specified manually.",
+  "loc.DR": "Location is calculated using dead reckoning (used in tunnels and other locations without GPS signal).",
+  "loc.N/A": "Location is unavailable.",
+
+  "apc.totalPassengersIn": "Total passengers in",
+  "apc.totalPassengersOut": "Total passengers out",
+  "apc.vehicleLoad": "Vehicle load",
+  "apc.vehicleLoadRatio": "Vehicle load ratio",
+  "apc.empty": "Empty",
+  "apc.mostlyAvailableSeats": "Mostly available seats",
+  "apc.fewAvailableSeats": "Few available seats",
+  "apc.onlyStandingSeats": "Only standing seats",
+  "apc.fewStandingSeats": "Few standing seats",
+  "apc.full": "Full",
+
+  "apc.totalPassengersIn": "Passengers in",
+  "apc.totalPassengersOut": "Passengers out",
+  "apc.vehicleLoad": "Vehicle load",
+  "apc.vehicleLoadRatio": "Vehicle load ratio",
 
   "auth.login": "Log in (HSL ID)",
   "auth.logout": "Log out",
